# WeCrypto

./: .gitignore  ANALYSIS-COMPLETE.txt  API_RESILIENCE_IMPLEMENTATION_GUIDE.md  API_RESILIENCE_INTEGRATION_COMPLETE.md  BACKTEST-RECALIBRATION-COMPLETE.md  BUILD_AND_TEST_GUIDE_v2.13.20.md  BUILD_INSTRUCTIONS.md  CHANGES_SUMMARY_v2.13.20.md  CODE_CHANGES_DETAILED.md  CONTRIBUTING.md  DEBUG_PANEL_ARCHITECTURE.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-VERIFICATION-v2.15.1.md  DEPLOYMENT-v2.15.2-H15-TUNING.md  DEPLOYMENT_CARD.txt  DEPLOYMENT_SUMMARY.md  EMPIRICAL_COIN_REWEIGHTING.md  ENDPOINTS_AND_KEYS.md  ERROR_FIXES_REPORT.md  ERROR_FIXES_TEST_GUIDE.md  EXECUTION-PLAN-RATE-LIMIT-FIX.md  EXECUTIVE_SUMMARY_v2.13.20.md  FALLBACK_CHAINS.md  FIXES_DEPLOYED.txt  FIXES_v2.13.20.md  FUNDING-DEPENDENCIES.txt  GRPC_INTEGRATION_GUIDE.md  Kalshi-Recent-Activity-5-9-06.csv  Kalshi-Recent-Activity-All-5-4-26.csv  Kalshi-Recent-Activity-All-5-6-06.csv  Kalshi-Recent-Activity-All.csv  LICENSE  LIQUIDITY-MAP-DEBUG-GUIDE.md  LLM_SETUP.md  LLM_WEAPONIZATION_COMPLETE.md  MOMENTUM_EXIT_INTEGRATION.md  MOMENTUM_INTEGRATION.js  NETWORK_ERROR_ANALYSIS.md  PATCH-DEPLOYMENT-SUMMARY-2026-05-14.md  PROXY-ORCHESTRATOR-FINAL-SUMMARY.txt  (+78 more)
.github/: AGENTS.md  WIRING_AGENT.md  copilot-instructions.md  research-agent-config.json
backtest-logs/: advanced-BTC-2026-05-04.json  advanced-ETH-2026-05-04.json  advanced-SOL-2026-05-04.json  advanced-XRP-2026-05-04.json  tuned-weights-market-2026-05-08.json  wf-BTC-2026-05-04.json  (+7 more)
proxy/: Cargo.toml
proxy/src/: config.rs  main.rs
proxy/src/utils/: cors.rs
(+640 files in other folders)
