[package]
name    = "we-crypto-proxy"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "we-crypto-proxy"
path = "src/main.rs"

[dependencies]
axum             = "0.7"
tokio            = { version = "1", features = ["full"] }
tower-http       = { version = "0.5", features = ["cors", "trace", "timeout", "catch-panic"] }
reqwest          = { version = "0.12", features = ["json", "gzip", "brotli", "rustls-tls", "cookies"], default-features = false }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
bytes            = "1"
http-body-util   = "0.1"
toml             = "0.8"
anyhow           = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmp-serde          = "1"
dashmap            = "6"
futures-util       = { version = "0.3", default-features = false, features = ["alloc"] }
